--- a/index.html
+++ b/index.html
@@ -3,14 +3,51 @@
 <head>
     <title>WANA</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="assets/lib/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="assets/lib/aos/aos.css">
+    <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="style.css">
     <script src="assets/lib/bootstrap/bootstrap.bundle.js"></script>
     <script src="assets/lib/aos/aos.js"></script>
 </head>
 <body>
+
+<nav class="navbar navbar-expand-lg bg-base">
+    <div class="container">
+        <div class="row align-items-center w-100 bg-base">
+            <div class="col-12 col-md-9">
+                <div class="d-flex flex-row">
+                    <a href="#" class="navbar-brand">
+                        <h1 class="d-none">WANA</h1>
+                        <!-- 原始圖的3/5寬高 -->
+                        <img src="assets/logo/LOGO-W.png" height="48" width="165" alt="WANA-Logo" />
+                    </a>
+
+                    <div class="d-flex flex-row align-items-center">
+                        <a class="nav-link text-white" href="#">About</a>
+                        <a class="nav-link text-white" href="#">Roadmap</a>
+                        <a class="nav-link text-white" href="#">Team</a>
+                        <a class="nav-link text-white" href="#">FAQ</a>
+                        <a class="nav-link disabled" href="#">Collection</a>
+                        <a class="nav-link disabled" href="#">Mint</a>
+                        <a class="nav-link disabled" href="#">MyWANA</a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="d-flex flex-row">
+                    <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.png" height="32" width="32" alt="instagram"/></a>
+                    <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.png" height="32" width="32" alt="discord"/></a>
+                    <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.png" height="32" width="32" alt="twitter"/></a>
+                    <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.png" height="32" width="32" alt="facebook"/></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
 
 
 </body>
