新增第2 3 5 24部分，css還沒調整完

--- a/index.html
+++ b/index.html
@@ -51,30 +51,59 @@
 
 
 <!-- 第二部分 Join discord -->
-<div height="60" color:white>
-    <div class="row align-items-center">
-        <button href="https://discord.com/channels/942427470165061673/942698736084213802">Join Discord</button>
+<div class="brandanimation">
+    <!-- 品牌動圖 -->
+    <div class="joindcbutton">
+        <class href="https://discord.com/channels/942427470165061673/942698736084213802">JOIN DISCORD</button>
 
     </div>
 </div>
 <!-- 第三部分 Mint Coming soon... -->
-<div class="bg-base" height="80">
-    <div class="row align-items-center">
+<div class="mintcommingsoon">
+   
         <h3 class ="text-white">???/???</h3>
         <a class="text-white">Mint Comint soon...</a>
-    </div>
+
     
 </div>
 <!-- 第四部分 嘿，一起拯救WANA星球吧！ -->
-<div class="bg-base">
+<div class="saveplanet">
     <div class="row align-items-center">
         <h1 class="text-white">嘿，一起拯救WANA星球吧！</h1>
     </div>
     
 </div>
 
+<!-- 第五部分-->
 
 
+<!-- 第六部分 成為家族中的一員-->
+<div class="family">
+    <h1>成為家族中的一員</h1>
+</div>
+<!-- 第七部分 人物區-->
+
+<!-- 第八部分 怎麼加入-->
+<!-- 第九部分 成為WANA Pixel超人後，你擁有的超能力！獲得家族皮膚，跟你的家族夥伴一同奮戰！-->
+<!-- 第十部分 五角形的圖-->
+<!-- 第十一部分 金木水火土-->
+<!-- 第十二部分 成為家族中的一員-->
+<!-- 第十三部分 成為家族中的一員-->
+<!-- 第十四部分 成為家族中的一員-->
+<!-- 第十五部分 成為家族中的一員-->
+<!-- 第十六部分 成為家族中的一員-->
+<!-- 第十七部分 成為家族中的一員-->
+<!-- 第十八部分 成為家族中的一員-->
+<!-- 第十九部分 成為家族中的一員-->
+<!-- 第二十部分 成為家族中的一員-->
+<!-- 第二一部分 成為家族中的一員-->
+<!-- 第二二部分 成為家族中的一員-->
+<!-- 第二三部分 成為家族中的一員-->
+<!-- 第二四部分 FAQ-->
+<div class="faq">
+    <h1>FAQ</h1>
+</div>
+<!-- 第二五部分 成為家族中的一員-->
 
 
 
