修改2 5 8部分 css待調整

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
 
 <!-- 第二部分 Join discord -->
-<div class="brandanimation">
+<div class="brandanimation" height="1000">
     <!-- 品牌動圖 -->
     <div class="joindcbutton">
-        <class href="https://discord.com/channels/942427470165061673/942698736084213802">JOIN DISCORD</button>
+        <a href="https://discord.com/channels/942427470165061673/942698736084213802">JOIN DISCORD</a>
 
     </div>
 </div>
@@ -74,7 +74,13 @@
     
 </div>
 
-<!-- 第五部分-->
+<!-- 第五部分 A&N-->
+<div class="AN">
+    <canvas id="myCanvas" width="1000" height="100" style="border:1px solid #FFFFFF;"></canvas>
+    <canvas id="myCanvas" width="1000" height="100" style="border:1px solid #FFFFFF;"></canvas>
+    <canvas id="myCanvas" width="1000" height="100" style="border:1px solid #FFFFFF"></canvas>
+    <canvas id="myCanvas" width="1000" height="100" style="border:1px solid #FFFFFF;"></canvas>
+</div>
 
 
 <!-- 第六部分 成為家族中的一員-->
@@ -82,8 +88,38 @@
     <h1>成為家族中的一員</h1>
 </div>
 <!-- 第七部分 人物區-->
-
+<div class="figure">
+    <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
+</div>
+<div class="figure">
+    <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
+</div>
+<div class="figure">
+    <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
+</div>
+<div class="figure">
+    <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
+</div>
+<div class="figure">
+    <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
+</div>
+<div class="figure">
+    <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
+</div>
+<div class="figure">
+    <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
+</div>
+<div class="figure">
+    <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
+</div>
 <!-- 第八部分 怎麼加入-->
+<canvas class="howtojoin" id="howtojoin"></canvas>
+<script>
+    var c = document.getElementById("howtojoin");
+    var ctx = c.getContext("2d");
+    ctx.font = "10px Arial white";
+    ctx.fillText("怎麼加入",10,50);
+    </script>
 <!-- 第九部分 成為WANA Pixel超人後，你擁有的超能力！獲得家族皮膚，跟你的家族夥伴一同奮戰！-->
 <!-- 第十部分 五角形的圖-->
 <!-- 第十一部分 金木水火土-->
