第一頁修改

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Hant-TW">
+<html lang="zh-Hant-TW" class="h-100">
 <head>
     <title>WANA</title>
     <meta charset="UTF-8">
@@ -12,8 +12,9 @@
     <script src="assets/lib/bootstrap/bootstrap.bundle.js"></script>
     <script src="assets/lib/aos/aos.js"></script>
 </head>
-<body>
+<body class="h-100">
 
+<!-- 第一部分 header navbar -->
 <nav class="navbar navbar-expand-lg bg-base">
     <div class="container">
         <div class="row align-items-center w-100 bg-base">
@@ -39,7 +40,7 @@
             </div>
             <div class="col-12 col-md-3">
                 <div class="d-flex flex-row">
-                    <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.png" height="64" width="32" alt="instagram"/></a>
+                    <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.png" height="32" width="32" alt="instagram"/></a>
                     <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.png" height="32" width="32" alt="discord"/></a>
                     <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.png" height="32" width="32" alt="twitter"/></a>
                     <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.png" height="32" width="32" alt="facebook"/></a>
@@ -51,15 +52,16 @@
 
 
 <!-- 第二部分 Join discord -->
-<div class="brandanimation" height="1000">
+<div class="full-layout bg-full brand-animation" style="background-image: url('assets/image/test-image.png')">
     <!-- 品牌動圖 -->
-    <div class="joindcbutton">
-        <a href="https://discord.com/channels/942427470165061673/942698736084213802">JOIN DISCORD</a>
-
+    <div class="join-discord-btn d-flex justify-content-center">
+        <div class="btn btn-primary btn-xxl bg-primary-linear border-0">
+            <a href="https://discord.com/channels/942427470165061673/942698736084213802" class="text-white text-decoration-none">JOIN DISCORD</a>
+        </div>
     </div>
 </div>
 <!-- 第三部分 Mint Coming soon... -->
-<div class="mintcommingsoon">
+<div class="mint-coming-soon">
    
         <h3 class ="text-white">???/???</h3>
         <a class="text-white">Mint Comint soon...</a>
@@ -170,7 +172,7 @@
                 </div>
                 <div class="col-12 col-md-3">
                     <div class="d-flex flex-row">
-                        <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.png" height="64" width="32" alt="instagram"/></a>
+                        <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.png" height="32" width="32" alt="instagram"/></a>
                         <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.png" height="32" width="32" alt="discord"/></a>
                         <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.png" height="32" width="32" alt="twitter"/></a>
                         <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.png" height="32" width="32" alt="facebook"/></a>
