--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 </div>
 
 <!-- 第三部分 Mint Coming soon... -->
-<div class="container-fluid d-flex justify-content-center mint-coming-soon-box">
-    <div class="col-10 bg-base border-white mint-coming-soon">
+<div class="container d-flex justify-content-center move-up-5">
+    <div class="col-10 bg-base mint-coming-soon">
         <h3 class="text-white h1">???/???</h3>
         <a href="" class="text-white">Mint Coming Soon...</a>
     </div>
