--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="assets/lib/bootstrap/bootstrap.bundle.js"></script>
     <script src="assets/lib/aos/aos.js"></script>
 </head>
-<body class="h-100">
+<body class="h-100 bg-base">
 
 <!-- 第一部分 header navbar -->
 <nav class="container-fluid navbar navbar-expand-lg bg-base">
@@ -51,7 +51,7 @@
 </nav>
 
 <!-- 第二部分 Join discord -->
-<div class="container-fluid full-layout bg-full brand-animation" style="background-image: url('assets/image/test-image.png')">
+<div class="container-fluid full-layout bg-full position-relative" style="background-image: url('assets/image/test-image.png')">
     <!-- 品牌動圖 -->
     <div class="join-discord-btn d-flex justify-content-center">
         <div class="btn btn-primary btn-xxl bg-brand-linear border-0">
@@ -64,30 +64,30 @@
 <div class="container d-flex justify-content-center move-up-5">
     <div class="col-10 bg-base mint-coming-soon">
         <h3 class="text-white h1">???/???</h3>
-        <a href="" class="text-white">Mint Coming Soon...</a>
+        <div class="text-white mb-2 h4">Mint Coming Soon...</div>
+        <div class="progress">
+            <div class="progress-bar mint-progress-bar bg-brand" style="width: 33%"></div>
+        </div>
     </div>
 </div>
 
 <!-- 第四部分 嘿，一起拯救WANA星球吧！ -->
-<div class="container-fluid saveplanet">
-    <div class="row align-items-center">
-        <h1 class="text-white">嘿，一起拯救WANA星球吧！</h1>
-    </div>
-
+<div class="container-fluid text-center">
+    <h3 class="text-white banner-text py-5">嘿，一起拯救WANA星球吧！</h3>
 </div>
 
 <!-- 第五部分 A&N-->
-<div class="container-fluid AN">
-    <canvas id="myCanvas" width="1000" height="100" style="border:1px solid #FFFFFF;"></canvas>
-    <canvas id="myCanvas" width="1000" height="100" style="border:1px solid #FFFFFF;"></canvas>
-    <canvas id="myCanvas" width="1000" height="100" style="border:1px solid #FFFFFF"></canvas>
-    <canvas id="myCanvas" width="1000" height="100" style="border:1px solid #FFFFFF;"></canvas>
+<div class="container text-center">
+    <div class="banner-layout bg-full mb-5" style="background-image: url('assets/image/banner.gif')"></div>
+    <div class="banner-layout bg-full mb-5" style="background-image: url('assets/image/fly.webp')"></div>
+    <div class="banner-layout bg-full mb-5" style="background-image: url('assets/image/banner.gif')"></div>
+    <div class="banner-layout bg-full mb-5" style="background-image: url('assets/image/fly.webp')"></div>
 </div>
 
 
 <!-- 第六部分 成為家族中的一員-->
-<div class="container-fluid family">
-    <h1>成為家族中的一員</h1>
+<div class="container-fluid text-center">
+    <h3 class="text-white banner-text py-5">成為家族中的一員</h3>
 </div>
 <!-- 第七部分 人物區-->
 <div class="container-fluid">
