--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 </div>
 
 <!-- 第五部分 A&N-->
+<!-- TODO: 切換時加上transition動畫效果看起來平滑一些 -->
 <!-- TODO: 手機版 & 補上文字 -->
 <!-- TODO: 手機版沒有hover，希望拉到可視範圍再跑圖 -->
 <div class="container text-center">
