--- a/test.html
+++ b/test.html
@@ -14,6 +14,22 @@
 </head>
 
 <style>
+    @media (max-width: 767px) {
+        .carousel-inner .carousel-item > div {
+            display: none;
+        }
+        .carousel-inner .carousel-item > div:first-child {
+            display: block;
+        }
+    }
+
+    .carousel-inner .carousel-item.active,
+    .carousel-inner .carousel-item-next,
+    .carousel-inner .carousel-item-prev {
+        display: flex;
+    }
+
+    /* medium and up screens */
     @media (min-width: 768px) {
 
         .carousel-inner .carousel-item-end.active,
@@ -35,20 +51,17 @@
 <body>
 
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="width: 200px; height: 200px;">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="assets/image/try1.png" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="assets/image/try2.png" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="assets/image/try3.png" class="d-block w-100" alt="...">
+    <div class="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="assets/image/try1.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/image/try2.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/image/try3.png" class="d-block w-100" alt="...">
+            </div>
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -60,6 +73,60 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+
+<div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active">
+            <div class="card">
+                <div class="card-img">
+                    <img src="//via.placeholder.com/500x400/31f?text=1" class="img-fluid">
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="card">
+                <div class="card-img">
+                    <img src="//via.placeholder.com/500x400/e66?text=2" class="img-fluid">
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="card">
+                <div class="card-img">
+                    <img src="//via.placeholder.com/500x400/7d2?text=3" class="img-fluid">
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="card">
+                <div class="card-img">
+                    <img src="//via.placeholder.com/500x400?text=4" class="img-fluid">
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="card">
+                <div class="card-img">
+                    <img src="//via.placeholder.com/500x400/aba?text=5" class="img-fluid">
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="card">
+                <div class="card-img">
+                    <img src="//via.placeholder.com/500x400/fc0?text=6" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+    <a class="carousel-control-prev bg-transparent w-aut" href="#recipeCarousel" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    </a>
+    <a class="carousel-control-next bg-transparent w-aut" href="#recipeCarousel" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    </a>
+</div>
+
 </body>
 </html>
 
