--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="assets/lib/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="assets/lib/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="assets/lib/aos/aos.css">
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="style.css">
     <script src="assets/lib/bootstrap/bootstrap.bundle.js"></script>
+    <script src="assets/lib/swiper/swiper-bundle.js"></script>
     <script src="assets/lib/jquery.js"></script>
     <script src="assets/lib/aos/aos.js"></script>
 </head>
@@ -94,32 +96,16 @@
     <h3 class="text-white banner-text py-5">成為家族中的一員</h3>
 </div>
 <!-- 第七部分 人物區-->
-<div class="container-fluid">
-    <div class="figure">
-        <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
-    </div>
-    <div class="figure">
-        <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
-    </div>
-    <div class="figure">
-        <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
-    </div>
-    <div class="figure">
-        <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
-    </div>
-    <div class="figure">
-        <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
-    </div>
-    <div class="figure">
-        <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
-    </div>
-    <div class="figure">
-        <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
-    </div>
-    <div class="figure">
-        <img src="assets/logo/LOGO-W.png" height="80" width="80" alt="WANA-Logo" />
+<div class="swiper">
+    <div class="swiper-wrapper py-5">
+        <div class="swiper-slide"><img src="assets/image/try1.png" class="swiper-img"/></div>
+        <div class="swiper-slide"><img src="assets/image/try2.png" class="swiper-img"/></div>
+        <div class="swiper-slide"><img src="assets/image/try3.png" class="swiper-img"/></div>
+        <div class="swiper-slide"><img src="assets/image/try4.png" class="swiper-img"/></div>
+        <div class="swiper-slide"><img src="assets/image/try5.png" class="swiper-img"/></div>
     </div>
 </div>
+
 
 <!-- 第八部分 怎麼加入-->
 <canvas class="container-fluid howtojoin" id="howtojoin"></canvas>
@@ -149,7 +135,6 @@
     <h1>FAQ</h1>
 </div>
 <!-- 第二五部分 成為家族中的一員-->
-
 
 
 
@@ -195,24 +180,4 @@
 </footer>
 </html>
 
-<script>
-    // hover動圖效果
-    // TODO: click、hover出去再進來時，重load gif圖 (方法: 改變Image src)
-    $(function() {
-        $('.animate-on-hover').on('click mouseover').hover(
-            function() {
-                let bgImgUrl = $(this).css('background-image');
-                $(this).css('background-image', bgImgUrl.replace('png', 'gif'));
-            },
-            function() {
-                let bgImgUrl = $(this).css('background-image');
-                $(this).css('background-image', bgImgUrl.replace('gif', 'png'));
-            }
-        );
-    });
-</script>
-
-<!-- Initialize AOS 放最後 -->
-<script>
-    AOS.init();
-</script>
+<script src="script.js"></script>
