需要金字塔去背圖

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <!-- 第四部分 嘿，一起拯救WANA星球吧！ -->
 <div class="container-fluid text-center">
-    <h3 class="text-white banner-text py-5">嘿，一起拯救WANA星球吧！</h3>
+    <h3 class="text-white banner-text-lg py-5">嘿，一起拯救WANA星球吧！</h3>
 </div>
 
 <!-- 第五部分 A&N-->
@@ -92,8 +92,8 @@
 
 
 <!-- 第六部分 成為家族中的一員-->
-<div class="container-fluid text-center">
-    <h3 class="text-white banner-text py-5">成為家族中的一員</h3>
+<div class="container-fluid text-center py-5">
+    <h3 class="text-white banner-text-lg py-5">成為家族中的一員</h3>
 </div>
 <!-- 第七部分 人物區-->
 <div class="swiper">
@@ -108,29 +108,71 @@
 
 
 <!-- 第八部分 怎麼加入-->
-<canvas class="container-fluid howtojoin" id="howtojoin"></canvas>
-<script>
-    var c = document.getElementById("howtojoin");
-    var ctx = c.getContext("2d");
-    ctx.font = "10px Arial white";
-    ctx.fillText("怎麼加入",10,50);
-    </script>
+<!-- TODO 下拉三角形與作動 -->
+<div class="d-flex justify-content-center mt-5 pt-5">
+    <div class="btn btn-primary btn-xxl bg-brand-linear border-0">
+        <a href="#" class="text-white text-decoration-none px-2">怎麼加入</a>
+    </div>
+</div>
+
 <!-- 第九部分 成為WANA Pixel超人後，你擁有的超能力！獲得家族皮膚，跟你的家族夥伴一同奮戰！-->
-<!-- 第十部分 五角形的圖-->
-<!-- 第十一部分 金木水火土-->
-<!-- 第十二部分 成為家族中的一員-->
+<div class="container-fluid text-center py-5">
+    <h3 class="text-white banner-text-lg">
+        成為 WANA Pixel 超能人後， <br>
+        你擁有的能力！</h3>
+    <h3 class="text-white banner-text-md py-5">
+        獲得家族皮膚，跟你的家族夥伴一同奮戰！</h3>
+</div>
+
+<!-- 第十部分 五角形的圖、第十一部分 金木水火土-->
+<div class="container">
+    <div class="row align-items-center">
+        <div class="col-6">
+            <img src="assets/image/try1.png" class="img-fluid"/>
+        </div>
+        <div class="col-6">
+            <div class="container-fluid text-center py-5">
+                <h3 class="text-white banner-text-md">金、木、水、火、土</h3>
+                <h3 class="text-white banner-text-sm py-5">
+                    說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字</h3>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 第十二部分 創造屬於你的Pixel超能人-->
+<!-- TODO 背景底圖漸層 -->
+<div class="container-fluid text-center py-5">
+    <h3 class="text-white banner-text-lg py-5">
+        更換配件，<br>
+        創造屬於你的Pixel超能人。</h3>
+</div>
+
 <!-- 第十三部分 成為家族中的一員-->
 <!-- 第十四部分 成為家族中的一員-->
 <!-- 第十五部分 成為家族中的一員-->
-<!-- 第十六部分 成為家族中的一員-->
-<!-- 第十七部分 成為家族中的一員-->
-<!-- 第十八部分 成為家族中的一員-->
+
+
+<!-- 第十六部分 配件稀有度-->
+<div class="container-fluid text-center py-5">
+    <h3 class="text-white banner-text-lg py-5">配件稀有度</h3>
+</div>
+
+<!-- 第十七部分 配件金字塔-->
+<div class="container-fluid full-layout bg-contain" style="background-image: url('assets/image/pyramid.png')"></div>
+
+<!-- 第十八部分 Roadmap-->
+<div class="container-fluid text-center py-5">
+    <h3 class="text-white banner-text-lg py-5">Roadmap</h3>
+</div>
+
 <!-- 第十九部分 成為家族中的一員-->
 <!-- 第二十部分 成為家族中的一員-->
 <!-- 第二一部分 成為家族中的一員-->
 <!-- 第二二部分 成為家族中的一員-->
 <!-- 第二三部分 成為家族中的一員-->
 <!-- 第二四部分 FAQ-->
+
 <div class="container-fluid faq">
     <h1>FAQ</h1>
 </div>
