第十八部份 Roadmap. version1

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <!-- 第四部分 嘿，一起拯救WANA星球吧！ -->
 <div class="container-fluid text-center">
-    <h3 class="text-white banner-text-lg py-5">嘿，一起拯救WANA星球吧！</h3>
+    <h2 class="text-white banner-text-lg py-5">嘿，一起拯救WANA星球吧！</h2>
 </div>
 
 <!-- 第五部分 A&N-->
@@ -93,7 +93,7 @@
 
 <!-- 第六部分 成為家族中的一員-->
 <div class="container-fluid text-center py-5">
-    <h3 class="text-white banner-text-lg py-5">成為家族中的一員</h3>
+    <h2 class="text-white banner-text-lg py-5">成為家族中的一員</h2>
 </div>
 <!-- 第七部分 人物區-->
 <div class="swiper">
@@ -133,8 +133,8 @@
         <div class="col-6">
             <div class="container-fluid text-center py-5">
                 <h3 class="text-white banner-text-md">金、木、水、火、土</h3>
-                <h3 class="text-white banner-text-sm py-5">
-                    說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字</h3>
+                <p class="text-white banner-text-sm py-5">
+                    說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字</p>
             </div>
         </div>
     </div>
@@ -155,21 +155,66 @@
 
 <!-- 第十六部分 配件稀有度-->
 <div class="container-fluid text-center py-5">
-    <h3 class="text-white banner-text-lg py-5">配件稀有度</h3>
+    <h2 class="text-white banner-text-lg py-5">配件稀有度</h2>
 </div>
 
 <!-- 第十七部分 配件金字塔-->
 <div class="container-fluid full-layout bg-contain" style="background-image: url('assets/image/pyramid.png')"></div>
 
-<!-- 第十八部分 Roadmap-->
+<!-- 第十八部分 Roadmap、第十九部分、第二十部分、第二一部分-->
 <div class="container-fluid text-center py-5">
-    <h3 class="text-white banner-text-lg py-5">Roadmap</h3>
+    <h2 class="text-white banner-text-lg py-5">Roadmap</h2>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-10">
+            <div class="row align-items-center">
+                <div class="col offset-1">
+                    <img src="assets/image/phase1.png" height="127" width="134" />
+                </div>
+                <div class="col">
+                    <h3 class="text-white banner-text-md d-inline py-5">Phase 1</h3>
+                </div>
+            </div>
+        </div>
+        <div class="col-10 offset-1">
+            <p class="text-white banner-text-sm py-5">Mint 數量1000，社群會員社群會員享有投票權利，可決定 WANA 配件 2.0 樣式走向。加入社群限制：要擁有一隻人像（ 含皮膚、髮、眼、身體、背景 ）</p>
+        </div>
+
+        <div class="col-10">
+            <div class="row align-items-center">
+                <div class="col">
+                    <img src="assets/image/phase2.png" height="263" width="213" />
+                </div>
+                <div class="col">
+                    <h3 class="text-white banner-text-md d-inline py-5">Phase 2</h3>
+                </div>
+            </div>
+        </div>
+        <div class="col-10 offset-1">
+            <p class="text-white banner-text-sm py-5">Mint 數量1000，社群會員社群會員享有投票權利，可決定 WANA 配件 2.0 樣式走向。加入社群限制：要擁有一隻人像（ 含皮膚、髮、眼、身體、背景 ）Mint 數量1000，社群會員社群會員享有投票權利，可決定 WANA 配件 2.0 樣式走向。加入社群限制：要擁有一隻人像（ 含皮膚、髮、眼、身體、背景 ）  </p>
+        </div>
+
+        <div class="col-10">
+            <div class="row align-items-center">
+                <div class="col">
+                    <img src="assets/image/phase3.png" height="242" width="330" />
+                </div>
+                <div class="col">
+                    <h3 class="text-white banner-text-md d-inline py-5">Phase 3</h3>
+                </div>
+            </div>
+        </div>
+        <div class="col-10 offset-1">
+            <p class="text-white banner-text-sm py-5">主打永續經營，買家持有 WANA NFT ，獲得利潤後，系統算利回饋給買家（稀有度越高回饋更高），獲利發送至 WANA Wallet</p>
+        </div>
+    </div>
 </div>
 
-<!-- 第十九部分 成為家族中的一員-->
-<!-- 第二十部分 成為家族中的一員-->
-<!-- 第二一部分 成為家族中的一員-->
-<!-- 第二二部分 成為家族中的一員-->
+<!-- 第二二部分 超能人新手村-->
+<div class="container-fluid text-center py-5">
+    <h2 class="text-white banner-text-lg py-5">超能人新手村</h2>
+</div>
 <!-- 第二三部分 成為家族中的一員-->
 <!-- 第二四部分 FAQ-->
 
