--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <div class="container">
     <div class="row align-items-center">
         <div class="col-6">
-            <img src="assets/image/try1.png" class="img-fluid"/>
+            <img src="assets/image/FivePhases.png" class="img-fluid"/>
         </div>
         <div class="col-6">
             <div class="container-fluid text-center py-5">
