--- a/index.html
+++ b/index.html
@@ -215,13 +215,43 @@
 <div class="container-fluid text-center py-5">
     <h2 class="text-white banner-text-lg py-5">超能人新手村</h2>
 </div>
-<!-- 第二三部分 成為家族中的一員-->
+<!-- 第二三部分 如何入金-->
+<div class="swiper">
+    <div class="swiper-wrapper py-5">
+        <div class="swiper-slide"><img src="assets/image/try1.png" class="swiper-img"/><div class="desc">如何入金？</div></div>
+        <div class="swiper-slide"><img src="assets/image/try2.png" class="swiper-img"/><div class="desc">如何入金？</div></div>
+        <div class="swiper-slide"><img src="assets/image/try3.png" class="swiper-img"/><div class="desc">如何入金？</div></div>
+        
+    </div>
+</div>
+
+  
+  
+  
 <!-- 第二四部分 FAQ-->
 
 <div class="container-fluid faq">
     <h1>FAQ</h1>
 </div>
-<!-- 第二五部分 成為家族中的一員-->
+<!-- 第二五部分 answer-->
+<div class="answer">
+    01.關於我們？
+</div>
+<div class="answer">
+    01.關於我們？
+</div>
+<div class="answer">
+    01.關於我們？
+</div>
+<div class="answer">
+    01.關於我們？
+</div>
+<div class="answer">
+    01.關於我們？
+</div>
+<div class="answer">
+    01.關於我們？
+</div>
 
 
 
