--- a/index.html
+++ b/index.html
@@ -278,31 +278,48 @@
   
   
 <!-- 第二四部分 FAQ-->
-
-<div class="container-fluid faq">
-    <h1>FAQ</h1>
+<div class="container-fluid text-center py-5">
+    <h2 class="text-white banner-text-lg">FAQ</h2>
 </div>
 <!-- 第二五部分 answer-->
-<div class="answer">
-    01.關於我們？
+<div class="container">
+    <div class="row justify-content-around text-center mb-3">
+        <div class="col-12 col-lg-6 my-4">
+            <div class="bg-white faq-box py-4 mx-4">
+                <h3 class="text-base banner-text-md d-inline">Q1. 關於我們？</h3>
+            </div>
+        </div>
+        <div class="col-12 col-lg-6 my-4">
+            <div class="bg-white faq-box py-4 mx-4">
+                <h3 class="text-base banner-text-md d-inline">Q1. 關於我們？</h3>
+            </div>
+        </div>
+    </div>
+    <div class="row justify-content-around text-center mb-3">
+        <div class="col-12 col-lg-6 my-4">
+            <div class="bg-white faq-box py-4 mx-4">
+                <h3 class="text-base banner-text-md d-inline">Q1. 關於我們？</h3>
+            </div>
+        </div>
+        <div class="col-12 col-lg-6 my-4">
+            <div class="bg-white faq-box py-4 mx-4">
+                <h3 class="text-base banner-text-md d-inline">Q1. 關於我們？</h3>
+            </div>
+        </div>
+    </div>
+    <div class="row justify-content-around text-center mb-3">
+        <div class="col-12 col-lg-6 my-4">
+            <div class="bg-white faq-box py-4 mx-4">
+                <h3 class="text-base banner-text-md d-inline">Q1. 關於我們？</h3>
+            </div>
+        </div>
+        <div class="col-12 col-lg-6 my-4">
+            <div class="bg-white faq-box py-4 mx-4">
+                <h3 class="text-base banner-text-md d-inline">Q1. 關於我們？</h3>
+            </div>
+        </div>
+    </div>
 </div>
-<div class="answer">
-    01.關於我們？
-</div>
-<div class="answer">
-    01.關於我們？
-</div>
-<div class="answer">
-    01.關於我們？
-</div>
-<div class="answer">
-    01.關於我們？
-</div>
-<div class="answer">
-    01.關於我們？
-</div>
-
-
 
 </body>
 <footer>
