update main pic

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <link rel="icon" type="image/x-icon" href="assets/logo/WANA_LOGO.png">
     <link rel="stylesheet" href="assets/lib/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="assets/lib/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="assets/lib/aos/aos.css">
@@ -25,8 +26,7 @@
                 <div class="d-flex flex-row">
                     <a href="#" class="navbar-brand">
                         <h1 class="d-none">WANA</h1>
-                        <!-- 原始圖的3/5寬高 -->
-                        <img src="assets/logo/LOGO-W.png" height="48" width="165" alt="WANA-Logo" />
+                        <img src="assets/logo/WANA_LOGO.png" height="48" alt="WANA-Logo" />
                     </a>
 
                     <div class="d-flex flex-row align-items-center">
@@ -54,7 +54,7 @@
 </nav>
 
 <!-- 第二部分 Join discord -->
-<div class="container-fluid full-layout bg-full position-relative" style="background-image: url('assets/image/test-image.png')">
+<div class="container-fluid full-layout bg-full position-relative" style="background-image: url('assets/image/main.gif')">
     <!-- 品牌動圖 -->
     <div class="join-discord-btn d-flex justify-content-center">
         <div class="btn btn-primary btn-xxl bg-brand-linear border-0">
@@ -66,10 +66,10 @@
 <!-- 第三部分 Mint Coming soon... -->
 <div class="container d-flex justify-content-center move-up-5">
     <div class="col-10 bg-base mint-coming-soon">
-        <h3 class="text-white h1">???/???</h3>
-        <div class="text-white mb-2 h4">Mint Coming Soon...</div>
+        <h3 class="text-white h1">0 / 999</h3>
+        <div class="text-white mb-2 h4 py-3">Mint Coming Soon...</div>
         <div class="progress">
-            <div class="progress-bar mint-progress-bar bg-brand" style="width: 33%"></div>
+            <div class="progress-bar mint-progress-bar bg-brand" style="width: 1%"></div>
         </div>
     </div>
 </div>
@@ -330,8 +330,7 @@
                     <div class="d-flex flex-row">
                         <a href="#" class="footer-brand">
                             <h1 class="d-none">WANA</h1>
-                            <!-- 原始圖的3/5寬高 -->
-                            <img src="assets/logo/LOGO-W.png" height="48" width="165" alt="WANA-Logo" />
+                            <img src="assets/logo/WANA_LOGO.png" height="48" alt="WANA-Logo" />
                         </a>
 
                         <div class="d-flex flex-row align-items-center">
