--- a/dressTest.html
+++ b/dressTest.html
@@ -1,51 +1,52 @@
-
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Bunny Dress Up</title>
-  <link rel= "stylesheet" type="text/css" href="dressup.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="assets/lib/bootstrap/bootstrap.css">
   <script src="assets/lib/jquery.js"></script>
   <script src="assets/lib/bootstrap/bootstrap.bundle.js"></script>
-  <style>
-    body{
-      background-color: #cc9ad6;
-      font-family: 'Ubuntu', sans-serif;
-    }
-    img {
-      position: absolute;
-      margin-left: 15%;
-      display:inline-block;
-      height:100%;
-    }
-    button{
-      margin-top:20%;
-    }
-    ul{
-      list-style-type: none;
-      display:inline-block;
-    }
-    character{
-      z-index: -1000;
-    }
-    .shirt{
-      visibility:hidden;
-      z-index: 2;
-    }
-    .pant{
-      visibility:hidden;
-      z-index: 1;
-    }
-  </style>
+
 </head>
+
 <body>
+
+<style>
+  body{
+    background-color: #cc9ad6;
+    font-family: 'Ubuntu', sans-serif;
+  }
+  .dress > img {
+    position: absolute;
+    margin-left: 15%;
+    display:inline-block;
+    height:100%;
+  }
+  button{
+    margin-top:20%;
+  }
+  ul{
+    list-style-type: none;
+    display:inline-block;
+  }
+  character{
+    z-index: -1000;
+  }
+  .shirt{
+    visibility:hidden;
+    z-index: 2;
+  }
+  .pant{
+    visibility:hidden;
+    z-index: 1;
+  }
+</style>
 <ul>
   <li><button class="btn btn-default" id="shirt_button" type="button" >top</button></li>
   <li><button class="btn btn-default" id="pant_button" type="button">bottom</button></li>
 </ul>
 
-<div class="container">
+<div class="container dress">
   <img id="character" src="https://s-media-cache-ak0.pinimg.com/originals/d5/19/f0/d519f0f021325f16e85a193ec3718130.png" />
   <img id="top1" class="shirt" src="https://s-media-cache-ak0.pinimg.com/originals/25/43/a9/2543a9ef622c17ca0ccd1fae4441a8ac.png" />
   <img id="top2" class="shirt" src="https://s-media-cache-ak0.pinimg.com/originals/05/b5/56/05b556aee24a79e17050270c7274de8c.png" />
@@ -62,9 +63,6 @@
   <img id="bottom6" class="pant" src="https://s-media-cache-ak0.pinimg.com/originals/da/1a/16/da1a1609695435ddc106d4f8989f1535.png" />
   <img id="bottom7" class="pant" src="https://s-media-cache-ak0.pinimg.com/originals/c3/78/78/c3787895d353d3b4d8534855ae0b1d83.png" />
 </div>
-
-</body>
-</html>
 <script>
   $(document).ready(function(){
     function ImageSwitcher(choices, i) {
@@ -109,3 +107,6 @@
   $("#shirt_button").click(function(){
     $("#shirt-menu").css("visibility", "visible"); });
 </script>
+
+</body>
+</html>
