文章輪播圖

--- a/swipertest.html
+++ b/swipertest.html
@@ -27,41 +27,29 @@
 
 <script>
     let swiper = new Swiper(".swiper", {
-        breakpoints: {
-            360: {
-                slidesPerView: 2,
-                spaceBetween: 100,
-            },
-            576: {
-                slidesPerView: 3,
-                spaceBetween: 150,
-            },
-            992: {
-                slidesPerView: 4,
-                spaceBetween: 150,
-            },
-            1200: {
-                slidesPerView: 5,
-                spaceBetween: 200,
-            },
-            1400: {
-                slidesPerView: 6,
-                spaceBetween: 250,
-            }
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
         },
+        allowTouchMove: true,
+        slidesPerView: 3,
+        spaceBetween: 50,
         autoHeight: true,
-        speed: 2000,
+        speed: 100,
         allowSlideNext: true,
         allowSlidePrev: true,
         centeredSlides: true,
         centerInsufficientSlides: true,
+        rewind: true,
+        preventClicks: true,
         loop: true,
-        grabCursor: true,
-        autoplay: {
-            delay: 0,
-            disableOnInteraction: false,
-            pauseOnMouseEnter: true,
-        },
+
+        threshold: 35,
+        autoplay: false,
+    });
+
+    swiper.on('slideChange', function () {
+        console.log('slide changed');
     });
 </script>
 </body>
