--- a/test2.html
+++ b/test2.html
@@ -98,11 +98,11 @@
 <!-- 第七部分 人物區-->
 <div class="swiper">
   <div class="swiper-wrapper py-5">
-    <div class="swiper-slide"><img src="assets/image/try1.png" class="swiper-img"/></div>
-    <div class="swiper-slide"><img src="assets/image/try2.png" class="swiper-img"/></div>
-    <div class="swiper-slide"><img src="assets/image/try3.png" class="swiper-img"/></div>
-    <div class="swiper-slide"><img src="assets/image/try4.png" class="swiper-img"/></div>
-    <div class="swiper-slide"><img src="assets/image/try5.png" class="swiper-img"/></div>
+    <div class="swiper-slide"><img src="assets/image/try1.png" class="character-img"/></div>
+    <div class="swiper-slide"><img src="assets/image/try2.png" class="character-img"/></div>
+    <div class="swiper-slide"><img src="assets/image/try3.png" class="character-img"/></div>
+    <div class="swiper-slide"><img src="assets/image/try4.png" class="character-img"/></div>
+    <div class="swiper-slide"><img src="assets/image/try5.png" class="character-img"/></div>
   </div>
 </div>
 
