換裝區塊切版

--- a/index.html
+++ b/index.html
@@ -149,6 +149,40 @@
 </div>
 
 <!-- 第十三部分 成為家族中的一員-->
+<div class="container">
+    <div class="row">
+        <div class="col-3">
+            <div class="d-flex flex-column align-items-start justify-content-between h-100">
+                <div class="col-8 move-up-half">
+                    <img class="img-fluid" src="assets/image/try1.png"/>
+                </div>
+                <div class="col-8 move-down-half">
+                    <img class="img-fluid" src="assets/image/try1.png"/>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-6">
+            <div class="d-flex justify-content-center">
+                <div class="col-10">
+                    <img class="img-fluid" src="assets/image/try1.png"/>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-3">
+            <div class="d-flex flex-column align-items-end justify-content-between h-100">
+                <div class="col-8 move-up-half">
+                    <img class="img-fluid" src="assets/image/try1.png"/>
+                </div>
+                <div class="col-8 move-down-half">
+                    <img class="img-fluid" src="assets/image/try1.png"/>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- 第十四部分 成為家族中的一員-->
 <!-- 第十五部分 成為家族中的一員-->
 
