temp dress & 調整配色

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </div>
 
 <!-- 第三部分 Mint Coming soon... -->
-<div class="container d-flex justify-content-center move-up-5">
+<div class="container d-flex justify-content-center position-relative move-up-5">
     <div class="col-10 bg-base mint-coming-soon">
         <h3 class="text-white h1">0 / 999</h3>
         <div class="text-white mb-2 h4 py-3">Mint Coming Soon...</div>
@@ -149,33 +149,54 @@
 </div>
 
 <!-- 第十三部分 成為家族中的一員-->
-<div class="container">
-    <div class="row">
-        <div class="col-3">
+<div class="container d-none d-lg-block py-5 my-5">
+    <div class="row py-5">
+        <div class="col-lg-3">
             <div class="d-flex flex-column align-items-start justify-content-between h-100">
-                <div class="col-8 move-up-half">
-                    <img class="img-fluid" src="assets/image/try1.png"/>
+                <div class="col-lg-8 move-up-half bg-accessory-linear">
+
+                    <!-- DressEye -->
+                    <div class="swiper dress-eye">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="assets/layers/eyes/E1_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/eyes/E2_15.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/eyes/E3_01.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/eyes/E4_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/eyes/E5_15.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/eyes/E6_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/eyes/E7_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/eyes/E8_15.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/eyes/E9_09.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/eyes/E10_09.png" class="img-fluid" /></div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+
+                        <div class="swiper-scrollbar"></div>
+                    </div>
+                    <div class="swiper-button-prev dress-eye dress-btn move-left-5 btn bg-base text-white"><</div>
+                    <div class="swiper-button-next dress-eye dress-btn move-right-5 btn bg-base text-white">></div>
+
                 </div>
-                <div class="col-8 move-down-half">
+                <div class="col-lg-8 move-down-half">
                     <img class="img-fluid" src="assets/image/try1.png"/>
                 </div>
             </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-lg-6">
             <div class="d-flex justify-content-center">
-                <div class="col-10">
+                <div class="col-lg-10">
                     <img class="img-fluid" src="assets/image/try1.png"/>
                 </div>
             </div>
         </div>
 
-        <div class="col-3">
+        <div class="col-lg-3">
             <div class="d-flex flex-column align-items-end justify-content-between h-100">
-                <div class="col-8 move-up-half">
+                <div class="col-lg-8 move-up-half">
                     <img class="img-fluid" src="assets/image/try1.png"/>
                 </div>
-                <div class="col-8 move-down-half">
+                <div class="col-lg-8 move-down-half">
                     <img class="img-fluid" src="assets/image/try1.png"/>
                 </div>
             </div>
@@ -385,3 +406,4 @@
 </html>
 
 <script src="script.js"></script>
+<script src="dress.js"></script>
