--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
 <div class="container d-none d-lg-block py-5 my-5">
     <div class="row py-5">
         <div class="col-lg-3">
-            <div class="d-flex flex-column align-items-start justify-content-between h-100">
-                <div class="col-lg-8 move-up-half bg-accessory-linear">
+            <div class="d-flex flex-column align-items-center justify-content-between h-100">
+                <div class="col-lg-8 dress-accessory-box move-up-half bg-accessory-linear">
 
-                    <!-- DressEye -->
-                    <div class="swiper dress-eye">
+                    <!-- 配件 eyes -->
+                    <div class="swiper dress-eyes">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide"><img src="assets/layers/eyes/E1_25.png" class="img-fluid"/></div>
                             <div class="swiper-slide"><img src="assets/layers/eyes/E2_15.png" class="img-fluid"/></div>
@@ -173,26 +173,90 @@
 
                         <div class="swiper-scrollbar"></div>
                     </div>
-                    <div class="swiper-button-prev dress-eye dress-btn move-left-5 btn bg-base text-white"><</div>
-                    <div class="swiper-button-next dress-eye dress-btn move-right-5 btn bg-base text-white">></div>
+                    <div class="swiper-button-prev dress-eyes dress-btn move-left-4 btn bg-base text-white"><</div>
+                    <div class="swiper-button-next dress-eyes dress-btn move-right-4 btn bg-base text-white">></div>
 
                 </div>
-                <div class="col-lg-8 move-down-half">
-                    <img class="img-fluid" src="assets/image/try1.png"/>
+                <div class="col-lg-8 dress-accessory-box move-down-half bg-accessory-linear">
+
+
+                    <!-- 配件 clothes -->
+                    <div class="swiper dress-clothes">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="assets/layers/clothes/C1_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/clothes/C2_09.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/clothes/C3_15.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/clothes/C4_15.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/clothes/C5_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/clothes/C6_09.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/clothes/C7_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/clothes/C8_01.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/clothes/C9_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/clothes/C10_15.png" class="img-fluid"/></div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+
+                        <div class="swiper-scrollbar"></div>
+                    </div>
+                    <div class="swiper-button-prev dress-clothes dress-btn move-left-4 btn bg-base text-white"><</div>
+                    <div class="swiper-button-next dress-clothes dress-btn move-right-4 btn bg-base text-white">></div>
+
+
+
                 </div>
             </div>
         </div>
-
         <div class="col-lg-6">
             <div class="d-flex justify-content-center">
                 <div class="col-lg-10">
-                    <img class="img-fluid" src="assets/image/try1.png"/>
+
+                    <!-- 主體 -->
+                    <div class="main-body-box mx-5 px-5">
+
+                        <div class="main-body">
+                            <!-- 主體 eyes -->
+                            <div class="swiper dress-eyes">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide"><img src="assets/layers/eyes/E1_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/eyes/E2_15.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/eyes/E3_01.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/eyes/E4_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/eyes/E5_15.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/eyes/E6_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/eyes/E7_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/eyes/E8_15.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/eyes/E9_09.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/eyes/E10_09.png" class="img-fluid" /></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-body">
+                            <!-- 主體 clothes -->
+                            <div class="swiper dress-clothes">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide"><img src="assets/layers/clothes/C1_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/clothes/C2_09.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/clothes/C3_15.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/clothes/C4_15.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/clothes/C5_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/clothes/C6_09.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/clothes/C7_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/clothes/C8_01.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/clothes/C9_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/clothes/C10_15.png" class="img-fluid"/></div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+
                 </div>
             </div>
         </div>
 
         <div class="col-lg-3">
-            <div class="d-flex flex-column align-items-end justify-content-between h-100">
+            <div class="d-flex flex-column align-items-center justify-content-between h-100">
                 <div class="col-lg-8 move-up-half">
                     <img class="img-fluid" src="assets/image/try1.png"/>
                 </div>
